--- a/Android_app/pubspec.yaml
+++ b/Android_app/pubspec.yaml
@@ -25,15 +25,19 @@ dependencies:
     sdk: flutter
   form_field_validator: ^1.0.1
   http: ^0.13.4
+  google_maps_flutter: ^2.1.0
+  custom_map_markers: ^0.0.1
+  location: ^4.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_maps: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  google_maps_flutter: ^2.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
